# odyssey

./: .eslintignore  .eslintrc.cjs  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  package.json  pnpm-lock.yaml
.cursor/rules/: project-structure.mdc
.github/workflows/: dockerize-on-release.yml  dockerize-on-release.yml.disabled
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  task_023.txt  task_024.txt  task_025.txt  task_027.txt  tasks.json  tasks.json.bak
apps/app/: .env.example  SETUP.md  (+6 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: migrated.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/mac/: window.rs
docs-local/: drizzle.txt  electric-sql.txt  loro.txt  orpc.txt  supabase.txt  svelte.txt  tanstack-query-svelte.txt
specs/: auth-plan.md  consolidate-code.md  desktop-release-plan.md  local-plan.md  supabase-collection.md  supabase-plan.md  type-safety.md  wire-up.md
tasks/: README.md  orpc-finalize.md  task-28-create-typyst-db-package.md  task-29-enhance-typyst-auth-package.md  task-30-refactor-web-app-package-structure.md  task-31-create-typyst-api-package.md  task-32-implement-tanstack-query-integration.md  task-33-complete-auth-wire-up-integration.md
(+238 files in other folders)
